--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
+    "express": "^5.0.0-alpha.2",
     "mysql2": "^3.2.0"
   },
   "devDependencies": {
